Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2024/commands/700.708.22107B.yaml
@@ -97,6 +97,14 @@ test_cases:
     7082380008002000083
     7082456696949490000
 - expected_values:
+    TOYOTA_EOT_V2: 33
+  response: |-
+    708102262107B000004
+    708212C0100007F9380
+    70822E680057F7D8000
+    7082380008001000084
+    70824495F5F39390000
+- expected_values:
     TOYOTA_EOT_V2: 34
   response: |-
     708102262107B000004
