--- a/tests/test_cases/2024/commands/7D2.221F5B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7D2.221F5B|fc=1.yaml
@@ -4,5 +4,15 @@ test_cases:
     TOYOTA_SOC: 32.94118
   response: 7DA04621F5B54
 - expected_values:
+    TOYOTA_SOC: 59.21569
+  response: |-
+    7DA04621F5B97
+    7DF020100
+    7ED06410098188013
+    7E906410098188003
+    7EE064100981A8003
+    7E8064100BF9CA013
+    7EA064100981A8003
+- expected_values:
     TOYOTA_SOC: 74.5098
   response: 7DA04621F5BBE
