--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -326,9 +326,11 @@ unsupported_commands_by_ecu:
   "780":
   - 780.788.2104:TOYOTA_BUCKLE_LS,TOYOTA_BUCKLE_RS
   "7B0":
+  - 7B0.21BC:TOYOTA_HAZARD_SWITCH_HISTORY
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
   - 7B0.7B8.2105:TOYOTA_DECEL,TOYOTA_DECEL_2
   - 7B0.7B8.2106:TOYOTA_YAW_1,TOYOTA_YAW_2,TOYOTA_YAW_RATE,TOYOTA_YAW_RATE2
+  - 7B0.7B8.2107:TOYOTA_WHEEL_CYLINDER_PRESSURE
   - 7B0.7B8.211D:TOYOTA_MAIN_IDLE_SW,TOYOTA_RESERVOIR_WARNING_SW
   - 7B0.7B8.211F:TOYOTA_PARKING_BRAKE_SW,TOYOTA_STOP_LIGHT_SW
   - 7B0.7B8.2121:TOYOTA_VEHICLE_SPEED_7B0,TOYOTA_VSS,TOYOTA_VSS_V3
@@ -337,18 +339,27 @@ unsupported_commands_by_ecu:
   - 7B0.7B8.2142:TOYOTA_FL_WHEEL_ACCELERATION,TOYOTA_FR_WHEEL_ACCELERATION,TOYOTA_RL_WHEEL_ACCELERATION,TOYOTA_RR_WHEEL_ACCELERATION
   - 7B0.7B8.2146:TOYOTA_ZP_DEC,TOYOTA_ZP_DEC2,TOYOTA_ZP_YAW,TOYOTA_ZP_YAW_RATE
   - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEERING_ANGLE,TOYOTA_STEER_ANGLE,TOYOTA_YAW,TOYOTA_YAW_RATE_V2
+  - 7B0.7B8.2148:TOYOTA_FR_REGEN_OPERATION,TOYOTA_FR_REGEN_REQUEST
+  - 7B0.7B8.2158:TOYOTA_REGEN_COOPERATION
   - 7B0.7B8.215A:TOYOTA_FL_WHEEL_VSC_CTRL,TOYOTA_FR_WHEEL_VSC_CTRL,TOYOTA_RL_WHEEL_VSC_CTRL,TOYOTA_RR_WHEEL_VSC_CTRL,TOYOTA_TRC_TRAC__BRAKE_CTRL,TOYOTA_TRC_TRAC__CTRL,TOYOTA_TRC_TRAC__ENGINE_CTRL
   - 7B0.7B8.215F:TOYOTA_BA_CTRL_STATUS,TOYOTA_FL_WHEEL_ABS_CTRL,TOYOTA_FR_WHEEL_ABS_CTRL,TOYOTA_PBA_CTRL_STATUS,TOYOTA_RL_WHEEL_ABS_CTRL,TOYOTA_RL_WHEEL_EBD_CTRL,TOYOTA_RR_WHEEL_ABS_CTRL,TOYOTA_RR_WHEEL_EBD_CTRL
+  - 7B0.7B8.21A1:TOYOTA_ZERO_POINT_OF_YAW_RATE
+  - 7B0.7B8.21A3:TOYOTA_SCC_SOLENOID_CURRENT,TOYOTA_SLA_SOLENOID_CURRENT,TOYOTA_SLR_SOLENOID_CURRENT,TOYOTA_SMC_SOLENOID_CURRENT,TOYOTA_SRC_SOLENOID_CURRENT,TOYOTA_SSC_SOLENOID_CURRENT
   - 7B0.7B8.21A6:TOYOTA_INSPECTION_MODE
   - 7B0.7B8.21BE:TOYOTA_ACCUMULATOR_OPEN,TOYOTA_DECELERATION_OPEN,TOYOTA_FL_WHEEL_SPEED_OPEN,TOYOTA_FR_WHEEL_CYLINDER_OPEN,TOYOTA_FR_WHEEL_SPEED_OPEN,TOYOTA_HV_COMMUNICATION_OPEN,TOYOTA_HV_COMM_OPEN,TOYOTA_MASTER_CYLINDER_OPEN,TOYOTA_RL_WHEEL_SPEED_OPEN,TOYOTA_RR_WHEEL_SPEED_OPEN,TOYOTA_STROKE_OPEN,TOYOTA_YAW_RATE_OPEN_ERROR
   "7B1":
   - 7B1.7B9.221026:TOYOTA_COUPLING_TEMP
   "7C0":
   - 7C0.7C8.2112:TOYOTA_CHECK_ENGINE_LIGHT,TOYOTA_EOP_LIGHT,TOYOTA_P_SEATBELT_BUCKLE_LIGHT,TOYOTA_TAIL_CANCEL_LIGHT
+  - 7C0.7C8.2113:TOYOTA_BAT_V
   - 7C0.7C8.2121:TOYOTA_VSS_7C0,TOYOTA_VSS_V2
   - 7C0.7C8.2123:TOYOTA_COOLANT_T,TOYOTA_ECT_7C0
   - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
+  - 7C0.7C8.2141:TOYOTA_OIL_CHANGE_ODO
+  - 7C0.7C8.2168:TOYOTA_RHEOSTAT
+  - 7C0.7C8.21A1:TOYOTA_KEY_REMIND_SOUND
   - 7C0.7C8.21A7:TOYOTA_SEAT_BELT_BEEP,TOYOTA_SEAT_BELT_BEEP_DRIVER,TOYOTA_SEAT_BELT_BEEP_PASSENGER,TOYOTA_SEAT_BELT_BEEP_REMINDER
+  - 7C0.7C8.21AC:TOYOTA_REVERSE_BEEP
   "7C4":
   - 7C4.2143:TOYOTA_AIR_OUTLET_SERVO_ACTU_PULSE_D,TOYOTA_AIR_OUTLET_SERVO_PULSE_D
   - 7C4.2144:TOYOTA_AIR_INLET_DAMPER_ACTUAL_PULSE,TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE
