--- a/tests/test_cases/2024/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2024/commands/700.708.2210A2.yaml
@@ -16,6 +16,20 @@ test_cases:
     70821A9960000000000
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_IDLE_1: 0.77647
+    TOYOTA_AFRL_LOW_1: 4.29176
+    TOYOTA_AFRL_MID_1_1: 14.05647
+    TOYOTA_AFRL_MID_2_1: 16.00941
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 0.98039
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.5098
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 14.31373
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 16.27451
+  response: |-
+    70810086210A2828BA4
+    70821A9960000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 8.58824
     TOYOTA_AFRL_IDLE_1: 1.94824
     TOYOTA_AFRL_LOW_1: 1.94824
     TOYOTA_AFRL_MID_1_1: 18.35294
