--- a/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
@@ -1,6 +1,12 @@
 command_id: 7C4.7CC.214B
 test_cases:
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 0.4
+  response: 7CC03614B56
+- expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 0.75
+  response: 7CC03614B57
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 1.1
   response: 7CC03614B58
 - expected_values:
