--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -863,6 +863,42 @@ test_cases:
     7E824800082E0800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 11
+    TOYOTA_AC_FB: 0.95703
+    TOYOTA_ELEC_LOAD_FB: 0.1001
+    TOYOTA_ENG_SPD_START_OFF: 1265.625
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 26
+    TOYOTA_EOT_V3: 26
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.1001
+    TOYOTA_ISC_FLOW: 13.87207
+    TOYOTA_ISC_LEARN: 6.13647
+    TOYOTA_ISC_POS: 7.25555
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 11
+    TOYOTA_PREV_TRIP_DST: 0.05
+    TOYOTA_PREV_TRIP_EOT: 26
+    TOYOTA_PREV_TRIP_IAT: 18
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 48
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000654
+    7E821010005583A4242
+    7E822333300002C6403
+    7E823B70055805293A3
+    7E82480528310800000
+    7E82500000000000000
+    7E804410C0F42
+    7E803410D16
+    7E80441100468
+- expected_values:
     TOYOTA_AC_AMB_T: -3
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0
