--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -1,6 +1,20 @@
 command_id: 750.758.2130|e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.32759
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.32759
+    TOYOTA_TP_FR: 3.8
+    TOYOTA_TP_RL: 3.8
+    TOYOTA_TP_RR: 3.8
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130A4FFFF
+    7582A21FFFF00000000
+- expected_values:
     TOYOTA_TIRE_P_FL: 2.43103
     TOYOTA_TIRE_P_FR: 2.44828
     TOYOTA_TIRE_P_RL: 2.41379
