--- a/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_BAT_V: 13.7
   response: 7C803611389
+- expected_values:
+    TOYOTA_BAT_V: 13.9
+  response: 7C80361138B
