--- a/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
@@ -1,6 +1,12 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
+    TOYOTA_AAT_7C4: 11.35
+  response: 7CC03612263
+- expected_values:
+    TOYOTA_AAT_7C4: 12.75
+  response: 7CC03612267
+- expected_values:
     TOYOTA_AAT_7C4: 26.4
   response: 7CC0361228E
 - expected_values:
