--- a/tests/test_cases/2018/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2182.yaml
@@ -9,6 +9,12 @@ test_cases:
     TOYOTA_ATF_TQC_T: 14.375
   response: '7E806618237003660'
 - expected_values:
+    TOYOTA_ATF_PAN_T: 26.875
+    TOYOTA_ATF_TQC_T: 28.125
+  response: |-
+    7E806618242E04420
+    7E8064100BF9FE893
+- expected_values:
     TOYOTA_ATF_PAN_T: 37.5
     TOYOTA_ATF_TQC_T: 36.875
   response: 7E80661824D804CE0
