Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -15,6 +15,20 @@ test_cases:
     70810086210A2807E92
     708219C940000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 10.54118
+    TOYOTA_AFRL_IDLE_1: 2.72941
+    TOYOTA_AFRL_LOW_1: 1.55765
+    TOYOTA_AFRL_MID_1_1: 8.97882
+    TOYOTA_AFRL_MID_2_1: 16.00941
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 10.78431
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 1.76471
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 9.21569
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 16.27451
+  response: |-
+    70810086210A2878497
+    70821A99B0000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 12.88471
     TOYOTA_AFRL_IDLE_1: 2.72941
     TOYOTA_AFRL_LOW_1: 2.72941
@@ -99,19 +113,19 @@ test_cases:
     70810086210A28E8C8B
     7082198930000000000
 - expected_values:
-    TOYOTA_AFRL_HIGH_1: 9.36941
-    TOYOTA_AFRL_IDLE_1: 7.02588
-    TOYOTA_AFRL_LOW_1: 3.51059
-    TOYOTA_AFRL_MID_1_1: 9.76
-    TOYOTA_AFRL_MID_2_1: 12.88471
-    TOYOTA_AF_LEARN_HIGH_PORT_B1: 9.60784
-    TOYOTA_AF_LEARN_IDLE_PORT_B1: 7.2549
-    TOYOTA_AF_LEARN_LOW_PORT_B1: 3.72549
-    TOYOTA_AF_LEARN_MID1_PORT_B1: 10
-    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+    TOYOTA_AFRL_HIGH_1: 10.54118
+    TOYOTA_AFRL_IDLE_1: 5.85412
+    TOYOTA_AFRL_LOW_1: 1.55765
+    TOYOTA_AFRL_MID_1_1: 10.15059
+    TOYOTA_AFRL_MID_2_1: 16.00941
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 10.78431
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.07843
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 1.76471
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 10.39216
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 16.27451
   response: |-
-    70810086210A2928999
-    70821A1980000000000
+    70810086210A28F849A
+    70821A99B0000000000
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 6.63529
     TOYOTA_AFRL_IDLE_1: 9.36941
