Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -29,6 +29,20 @@ test_cases:
     7582A10076130AAABA9
     7582A21A8FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.44828
+    TOYOTA_TIRE_P_FR: 2.46552
+    TOYOTA_TIRE_P_RL: 2.41379
+    TOYOTA_TIRE_P_RR: 2.41379
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.44828
+    TOYOTA_TP_FR: 2.46552
+    TOYOTA_TP_RL: 2.41379
+    TOYOTA_TP_RR: 2.41379
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    7582A10076130ABACA9
+    7582A21A9FF00000000
+- expected_values:
     TOYOTA_TIRE_P_FL: 2.53448
     TOYOTA_TIRE_P_FR: 2.53448
     TOYOTA_TIRE_P_RL: 2.53448
