--- a/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
@@ -44,6 +44,12 @@ test_cases:
   response: 7B8056106808000
 - expected_values:
     TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 0
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: 0
+  response: 7B805610680801E
+- expected_values:
+    TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: 9
     TOYOTA_YAW_RATE: 0
     TOYOTA_YAW_RATE2: 9
