--- a/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
@@ -10,6 +10,12 @@ test_cases:
     TOYOTA_FL_WHEEL_ACCELERATION: 1
     TOYOTA_FR_WHEEL_ACCELERATION: 0
     TOYOTA_RL_WHEEL_ACCELERATION: 0
+    TOYOTA_RR_WHEEL_ACCELERATION: 0
+  response: 7B806614200010000
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 1
+    TOYOTA_FR_WHEEL_ACCELERATION: 0
+    TOYOTA_RL_WHEEL_ACCELERATION: 0
     TOYOTA_RR_WHEEL_ACCELERATION: 1
   response: 7B806614200010100
 - expected_values:
