--- a/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
@@ -1,6 +1,9 @@
 command_id: 7C0.7C8.2113
 test_cases:
 - expected_values:
+    TOYOTA_BAT_V: 13.6
+  response: 7C803611388
+- expected_values:
     TOYOTA_BAT_V: 13.7
   response: 7C803611389
 - expected_values:
