--- a/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2121.yaml
@@ -20,3 +20,11 @@ test_cases:
     TOYOTA_VSS_7C0: 70
     TOYOTA_VSS_V2: 70
   response: 7C803612146
+- expected_values:
+    TOYOTA_VSS_7C0: 71
+    TOYOTA_VSS_V2: 71
+  response: 7C803612147
+- expected_values:
+    TOYOTA_VSS_7C0: 82
+    TOYOTA_VSS_V2: 82
+  response: 7C803612152
