--- a/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
@@ -5,9 +5,21 @@ test_cases:
     TOYOTA_ECT_7C0: 44
   response: 7C803612358
 - expected_values:
+    TOYOTA_COOLANT_T: 48.5
+    TOYOTA_ECT_7C0: 48.5
+  response: 7C803612361
+- expected_values:
+    TOYOTA_COOLANT_T: 64
+    TOYOTA_ECT_7C0: 64
+  response: 7C803612380
+- expected_values:
     TOYOTA_COOLANT_T: 79
     TOYOTA_ECT_7C0: 79
   response: 7C80361239E
+- expected_values:
+    TOYOTA_COOLANT_T: 82
+    TOYOTA_ECT_7C0: 82
+  response: 7C8036123A4
 - expected_values:
     TOYOTA_COOLANT_T: 90.5
     TOYOTA_ECT_7C0: 90.5
