--- a/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_ADJUSTED_AMBIENT_T: 11.76
   response: 7CC03613D85
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 20.72
+  response: 7CC03613DA1
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 22.96
   response: 7CC03613DA8
 - expected_values:
