--- a/tests/test_cases/2018/commands/7C4.2144.yaml
+++ b/tests/test_cases/2018/commands/7C4.2144.yaml
@@ -12,3 +12,9 @@ test_cases:
     7CC0361441C
     7DF02010C
     7E804410C14BA
+- expected_values:
+    TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 7
+  response: |-
+    7DF02010C
+    7E804410C1068
+    7CC03614407
