--- a/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
@@ -7,6 +7,12 @@ test_cases:
     TOYOTA_AAT_7C4: 12.75
   response: 7CC03612267
 - expected_values:
+    TOYOTA_AAT_7C4: 18
+  response: 7CC03612276
+- expected_values:
+    TOYOTA_AAT_7C4: 20.1
+  response: 7CC0361227C
+- expected_values:
     TOYOTA_AAT_7C4: 26.4
   response: 7CC0361228E
 - expected_values:
