--- a/tests/test_cases/2018/commands/7C0.7C8.2112.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2112.yaml
@@ -8,3 +8,11 @@ test_cases:
   response: |-
     7C81009611200000000
     7C82100000000000000
+- expected_values:
+    TOYOTA_CHECK_ENGINE_LIGHT: 0
+    TOYOTA_EOP_LIGHT: 0
+    TOYOTA_P_SEATBELT_BUCKLE_LIGHT: 0
+    TOYOTA_TAIL_CANCEL_LIGHT: 0
+  response: |-
+    7C81009611200000002
+    7C82100020000000000
