--- a/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2123.yaml
@@ -13,6 +13,10 @@ test_cases:
     TOYOTA_ECT_7C0: 64
   response: 7C803612380
 - expected_values:
+    TOYOTA_COOLANT_T: 72
+    TOYOTA_ECT_7C0: 72
+  response: 7C803612390
+- expected_values:
     TOYOTA_COOLANT_T: 79
     TOYOTA_ECT_7C0: 79
   response: 7C80361239E
@@ -20,6 +24,14 @@ test_cases:
     TOYOTA_COOLANT_T: 82
     TOYOTA_ECT_7C0: 82
   response: 7C8036123A4
+- expected_values:
+    TOYOTA_COOLANT_T: 84
+    TOYOTA_ECT_7C0: 84
+  response: 7C8036123A8
+- expected_values:
+    TOYOTA_COOLANT_T: 86
+    TOYOTA_ECT_7C0: 86
+  response: 7C8036123AC
 - expected_values:
     TOYOTA_COOLANT_T: 90.5
     TOYOTA_ECT_7C0: 90.5
