--- a/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
@@ -10,6 +10,9 @@ test_cases:
     TOYOTA_EVAP_FIN_THERMISTOR: 1.1
   response: 7CC03614B58
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 1.45
+  response: 7CC03614B59
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 3.2
   response: 7CC03614B5E
 - expected_values:
