Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -34,6 +34,10 @@ test_cases:
     7E822CF81789DCF818F
     7E823AFFFB7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 2.61798
+    TOYOTA_AF_LAMBDA_B1S1: 0.89484
+    TOYOTA_O2S_B1S2: 0.575
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.92004
   response: |-
     7E810186104765B731D
