--- a/tests/test_cases/2025/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2025/commands/701.709.22162B.yaml
@@ -19,5 +19,8 @@ test_cases:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 43
   response: 7090562162B002B
 - expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 44
+  response: 7090562162B002C
+- expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 332
   response: 7090562162B014C
