--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -70,6 +70,10 @@ test_cases:
     7E822EB8008813B8000
     7E8231BFF1BFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.86423
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.97968
   response: |-
     7E8101861047E079DCF
@@ -154,6 +158,10 @@ test_cases:
     7E822D17FFF7FA87FFE
     7E82398FF5DFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.28122
+    TOYOTA_AF_LAMBDA_B1S1: 0.99155
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27F8E
@@ -168,6 +176,10 @@ test_cases:
     7E822008000800F8000
     7E823A0FFA7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
+    TOYOTA_AF_LAMBDA_B1S1: 0.9958
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2801A
@@ -175,6 +187,10 @@ test_cases:
     7E8221A800080008000
     7E82394FF94FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.31048
+    TOYOTA_AF_LAMBDA_B1S1: 0.99738
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2804E
