Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/commands/7C4.7CC.2126.yaml
+++ b/tests/test_cases/2008/commands/7C4.7CC.2126.yaml
@@ -18,3 +18,9 @@ test_cases:
 - expected_values:
     TOYOTA_ECT: 77.25
   response: 7CC036126D9
+- expected_values:
+    TOYOTA_ECT: 87.4
+  response: 7CC036126F6
+- expected_values:
+    TOYOTA_ECT: 87.75
+  response: 7CC036126F7
