--- a/tests/test_cases/2008/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2105.yaml
@@ -1,10 +1,22 @@
 command_id: 7B0.7B8.2105
 test_cases:
 - expected_values:
+    TOYOTA_DECEL: -0.21388
+  response: 7B80761057E02CDFFB8
+- expected_values:
     TOYOTA_DECEL: -0.07129
     TOYOTA_DECEL_2: -18.18
   response: 7B80761057F00002160
 - expected_values:
     TOYOTA_DECEL: -0.07129
+  response: 7B80761057F02D7FF31
+- expected_values:
+    TOYOTA_DECEL: -0.07129
+  response: 7B80761057F02F1FF74
+- expected_values:
+    TOYOTA_DECEL: -0.07129
     TOYOTA_DECEL_2: -17.75224
   response: 7B80761057F030E0066
+- expected_values:
+    TOYOTA_DECEL: -0.07129
+  response: 7B80761057F032B01D6
