--- a/tests/test_cases/2008/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2008/commands/7C0.7C8.2123.yaml
@@ -24,3 +24,11 @@ test_cases:
     TOYOTA_COOLANT_T: 77.5
     TOYOTA_ECT_7C0: 77.5
   response: 7C80361239B
+- expected_values:
+    TOYOTA_COOLANT_T: 87.5
+    TOYOTA_ECT_7C0: 87.5
+  response: 7C8036123AF
+- expected_values:
+    TOYOTA_COOLANT_T: 88
+    TOYOTA_ECT_7C0: 88
+  response: 7C8036123B0
