--- a/tests/test_cases/2024/commands/700.708.221089.yaml
+++ b/tests/test_cases/2024/commands/700.708.221089.yaml
@@ -5,10 +5,14 @@ test_cases:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 59.90415
   response: '708056210892659'
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 63.99254
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.99254
-  response: 7080562108928F7
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.44872
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.44872
+  response: 7080562108927FA
 - expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.07797
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.07797
   response: '708056210892905'
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 65.67062
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 65.67062
+  response: 708056210892A0A
