--- a/tests/test_cases/2024/commands/700.708.221621.yaml
+++ b/tests/test_cases/2024/commands/700.708.221621.yaml
@@ -21,3 +21,9 @@ test_cases:
 - expected_values:
     TOYOTA_GEAR_V2: 7
   response: '7080462162107'
+- expected_values:
+    TOYOTA_GEAR_V2: 8
+  response: '7080462162108'
+- expected_values:
+    TOYOTA_GEAR_V2: 9
+  response: '7080462162109'
