Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.221089.yaml
+++ b/tests/test_cases/2024/commands/700.708.221089.yaml
@@ -1,17 +1,17 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 59.90415
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 59.90415
-  response: '708056210892659'
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 51.13545
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 51.13545
+  response: 7080562108920BC
 - expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.44872
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.44872
   response: 7080562108927FA
 - expected_values:
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.07797
-    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.07797
-  response: '708056210892905'
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.05356
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.05356
+  response: '708056210892901'
 - expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 65.67062
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 65.67062
