--- a/tests/test_cases/2024/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2024/commands/701.709.22162B.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 839
   response: 7090562162B0347
+- expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 841
+  response: 7090562162B0349
