--- a/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
@@ -37,7 +37,10 @@ test_cases:
     7DA100B621075A0A6A0
     7DA21A4A0AFA0A60000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 106.07
     TOYOTA_FR_WHEEL_VSS: 105.79
+    TOYOTA_RL_WHEEL_VSS: 106.35
+    TOYOTA_RR_WHEEL_VSS: 106.34
   response: |-
     7DA100B621075A953A9
     7DA216FA98AA98B0000
