Update command data for Toyota/Tundra

--- a/tests/test_cases/2006/command_support.yaml
+++ b/tests/test_cases/2006/command_support.yaml
@@ -18,6 +18,7 @@ supported_commands_by_ecu:
   - 0112:AIR_STAT
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -26,6 +27,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013D:CATEMP21
   - 013E:CATEMP12
