--- a/tests/test_cases/2006/commands/7E0.0131.yaml
+++ b/tests/test_cases/2006/commands/7E0.0131.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 17
   response: '7E80441310011'
+- expected_values:
+    CLR_DIST: 6794
+  response: 7E80441311A8A
