--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -195,6 +195,9 @@ supported_commands_by_ecu:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
   - 0105:ECT
+  - 0106:SHRTFT1
+  - 0108:SHRTFT2,SHRTFT4
+  - 010A:FP
   - 010C:RPM
   - 010D:VSS
   - 0111:TP
@@ -214,6 +217,9 @@ supported_commands_by_ecu:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
   - 0105:ECT
+  - 0106:SHRTFT1
+  - 0108:SHRTFT2,SHRTFT4
+  - 010A:FP
   - 010C:RPM
   - 010D:VSS
   - 010F:IAT
@@ -238,6 +244,9 @@ supported_commands_by_ecu:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
   - 0105:ECT
+  - 0106:SHRTFT1
+  - 0108:SHRTFT2,SHRTFT4
+  - 010A:FP
   - 010C:RPM
   - 010D:VSS
   - 0111:TP
@@ -254,6 +263,9 @@ supported_commands_by_ecu:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
   - 0105:ECT
+  - 0106:SHRTFT1
+  - 0108:SHRTFT2,SHRTFT4
+  - 010A:FP
   - 010C:RPM
   - 010D:VSS
   - 010F:IAT
