--- a/tests/test_cases/2025/commands/700.708.221019.yaml
+++ b/tests/test_cases/2025/commands/700.708.221019.yaml
@@ -10,11 +10,11 @@ test_cases:
     TOYOTA_INJECTION: DIRECT
   response: 70807621019015D8B30
 - expected_values:
+    TOYOTA_INJECTION: DIRECT
+  response: 7080762101901FF8000
+- expected_values:
     TOYOTA_INJECTION: BOTH
   response: '7080762101902078000'
 - expected_values:
     TOYOTA_INJECTION: BOTH
   response: 70807621019024D8AFF
-- expected_values:
-    TOYOTA_INJECTION: BOTH
-  response: 7080762101902FF8000
