--- a/tests/test_cases/2008/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2008/commands/7C4.7CC.213D.yaml
@@ -1,5 +1,26 @@
 command_id: 7C4.7CC.213D
 test_cases:
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 23.28
+  response: 7CC03613DA9
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 23.6
+  response: 7CC03613DAA
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 23.92
+  response: 7CC03613DAB
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 24.24
+  response: 7CC03613DAC
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 24.56
+  response: 7CC03613DAD
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 24.88
+  response: 7CC03613DAE
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 25.2
+  response: 7CC03613DAF
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 27.12
   response: 7CC03613DB5
