Update command data for Toyota/Tundra

--- a/tests/test_cases/2006/command_support.yaml
+++ b/tests/test_cases/2006/command_support.yaml
@@ -48,6 +48,7 @@ supported_commands_by_ecu:
   - 7E0.0104:LOAD_PCT
   - 7E0.0105:ECT
   - 7E0.0121:MIL_DIST
+  - 7E0.0124:LAMBDA11_VOLT,O2S11_VOLT
   - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0144:EQ_RAT
