--- a/tests/test_cases/2006/commands/7E0.0131.yaml
+++ b/tests/test_cases/2006/commands/7E0.0131.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     CLR_DIST: 6794
   response: 7E80441311A8A
+- expected_values:
+    CLR_DIST: 6808
+  response: 7E80441311A98
+- expected_values:
+    CLR_DIST: 6809
+  response: 7E80441311A99
