--- a/tests/test_cases/2006/commands/7E0.0104.yaml
+++ b/tests/test_cases/2006/commands/7E0.0104.yaml
@@ -12,3 +12,12 @@ test_cases:
 - expected_values:
     LOAD_PCT: 30.19608
   response: 7E80341044D
+- expected_values:
+    LOAD_PCT: 33.33333
+  response: '7E803410455'
+- expected_values:
+    LOAD_PCT: 34.11765
+  response: '7E803410457'
+- expected_values:
+    LOAD_PCT: 43.92157
+  response: '7E803410470'
