--- a/tests/test_cases/2006/commands/7E0.7E8.2124.yaml
+++ b/tests/test_cases/2006/commands/7E0.7E8.2124.yaml
@@ -3,15 +3,27 @@ test_cases:
 - expected_values:
     TOYOTA_COMMUNICATION_WITH_BRAKE: 1
     TOYOTA_COMMUNICATION_WITH_HV: 1
+    TOYOTA_COMM_WITH_AIR_CONDITIONER: 0
+    TOYOTA_COMM_WITH_VALVEMATIC_COMM: 1
+  response: 7E80661247BDB62AF
+- expected_values:
+    TOYOTA_COMMUNICATION_WITH_BRAKE: 1
+    TOYOTA_COMMUNICATION_WITH_HV: 1
     TOYOTA_COMM_WITH_AIR_CONDITIONER: 1
     TOYOTA_COMM_WITH_VALVEMATIC_COMM: 1
-  response: 7E80661247F666813
+  response: 7E80661247E10666F
 - expected_values:
     TOYOTA_COMMUNICATION_WITH_BRAKE: 1
     TOYOTA_COMMUNICATION_WITH_HV: 1
     TOYOTA_COMM_WITH_AIR_CONDITIONER: 1
     TOYOTA_COMM_WITH_VALVEMATIC_COMM: 1
   response: 7E80661247FFB68C7
+- expected_values:
+    TOYOTA_COMMUNICATION_WITH_BRAKE: 0
+    TOYOTA_COMMUNICATION_WITH_HV: 0
+    TOYOTA_COMM_WITH_AIR_CONDITIONER: 0
+    TOYOTA_COMM_WITH_VALVEMATIC_COMM: 0
+  response: '7E806612480136971'
 - expected_values:
     TOYOTA_COMMUNICATION_WITH_BRAKE: 0
     TOYOTA_COMMUNICATION_WITH_HV: 0
