--- a/tests/test_cases/2006/commands/7E0.7E8.21DA.yaml
+++ b/tests/test_cases/2006/commands/7E0.7E8.21DA.yaml
@@ -3,3 +3,12 @@ test_cases:
 - expected_values:
     TOYOTA_GEAR_V3: 1
   response: 7E80461DA0104
+- expected_values:
+    TOYOTA_GEAR_V3: 2
+  response: 7E80461DA0204
+- expected_values:
+    TOYOTA_GEAR_V3: 4
+  response: 7E80461DA0404
+- expected_values:
+    TOYOTA_GEAR_V3: 5
+  response: 7E80461DA0504
