Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22106A.yaml
+++ b/tests/test_cases/2024/commands/700.708.22106A.yaml
@@ -12,3 +12,7 @@ test_cases:
     TOYOTA_FP_DUTY_RATIO: 312.31707
     TOYOTA_FUEL_PUMP_DUTY_RATIO: 312.31707
   response: 7080562106A1402
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 365.54878
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 365.54878
+  response: 7080562106A176B
