Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -9,6 +9,10 @@ test_cases:
     7E8228D800B849F800B
     7E8230FFF00FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.78495
   response: |-
     7E81018610464FA9DCF
