--- a/tests/test_cases/2008/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2008/commands/7C0.7C8.2123.yaml
@@ -8,3 +8,9 @@ test_cases:
     TOYOTA_COOLANT_T: 89.5
     TOYOTA_ECT_7C0: 89.5
   response: 7C8036123B3
+- expected_values:
+    TOYOTA_COOLANT_T: 72
+    TOYOTA_ECT_7C0: 72
+  response: |-
+    7C8036168B7
+    7C803612390
