--- a/tests/test_cases/2008/commands/7C0.7C8.2129.yaml
+++ b/tests/test_cases/2008/commands/7C0.7C8.2129.yaml
@@ -1,6 +1,10 @@
 command_id: 7C0.7C8.2129
 test_cases:
 - expected_values:
+    TOYOTA_FLI_VOL: 0
+    TOYOTA_FUEL_INPUT: 0
+  response: 7C803612900
+- expected_values:
     TOYOTA_FLI_VOL: 13.47424
     TOYOTA_FUEL_INPUT: 102
   response: 7C803612966
