Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/commands/7E0.7E8.2124.yaml
+++ b/tests/test_cases/2008/commands/7E0.7E8.2124.yaml
@@ -47,4 +47,10 @@ test_cases:
     TOYOTA_COMMUNICATION_WITH_HV: 0
     TOYOTA_COMM_WITH_AIR_CONDITIONER: 0
     TOYOTA_COMM_WITH_VALVEMATIC_COMM: 0
+  response: 7E8066124800A6999
+- expected_values:
+    TOYOTA_COMMUNICATION_WITH_BRAKE: 0
+    TOYOTA_COMMUNICATION_WITH_HV: 0
+    TOYOTA_COMM_WITH_AIR_CONDITIONER: 0
+    TOYOTA_COMM_WITH_VALVEMATIC_COMM: 0
   response: '7E806612480156999'
