--- a/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
@@ -45,7 +45,10 @@ test_cases:
     7DA100B621075A953A9
     7DA216FA98AA98B0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 115.65
     TOYOTA_FR_WHEEL_VSS: 115.78
+    TOYOTA_RL_WHEEL_VSS: 116.78
+    TOYOTA_RR_WHEEL_VSS: 116.75
   response: |-
     7DA100B621075AD3AAD
     7DA212DAD9BAD9E0000
