Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -173,6 +173,10 @@ test_cases:
     7E8228E7FFF7FF28000
     7E823A0FFA4FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
+    TOYOTA_AF_LAMBDA_B1S1: 0.99502
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF28000
@@ -202,6 +206,10 @@ test_cases:
     7E8224E80017FFB8000
     7E8238CFF90FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.45679
+    TOYOTA_AF_LAMBDA_B1S1: 1.03273
+    TOYOTA_O2S_B1S2: 0.66
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF284DA
