Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -225,6 +225,14 @@ test_cases:
     70823831D7FFF000082
     7082447646442420000
 - expected_values:
+    TOYOTA_EOT_V2: -9
+  response: |-
+    708102262107B002804
+    70821A50200317EEC86
+    70822D380247F2C81F2
+    708238000800100006C
+    708241F484714150025
+- expected_values:
     TOYOTA_EOT_V2: 19
   response: |-
     708102262107B002A04
