Update command data for Toyota/Tundra

--- a/tests/test_cases/2014/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2147.yaml
@@ -39,12 +39,16 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -7.5
+    TOYOTA_STEER_ANGLE: -7.5
     TOYOTA_YAW: -1
     TOYOTA_YAW_RATE_V2: -1
   response: 7B807614700007F7FB5
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: 0
+    TOYOTA_STEER_ANGLE: 0
     TOYOTA_YAW: 0
     TOYOTA_YAW_RATE_V2: 0
   response: 7B80761470000808000
@@ -59,6 +63,8 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0.34
     TOYOTA_LNG_G: 0.04
+    TOYOTA_STEERING_ANGLE: 172.5
+    TOYOTA_STEER_ANGLE: 172.5
     TOYOTA_YAW: 19
     TOYOTA_YAW_RATE_V2: 19
   response: 7B807614711029386BD
