Update command data for Toyota/Tundra

--- a/tests/test_cases/2006/commands/7E0.0124.yaml
+++ b/tests/test_cases/2006/commands/7E0.0124.yaml
@@ -1,18 +1,22 @@
 command_id: 7E0.0124
 test_cases:
 - expected_values:
-    LAMBDA11_VOLT: 0.98392
-    O2S11_VOLT: 3.19217
-  response: 7E80641247DF16633
+    LAMBDA11_VOLT: 0.92627
+    O2S11_VOLT: 2.7029
+  response: '7E806412476905689'
 - expected_values:
-    LAMBDA11_VOLT: 0.99069
-    O2S11_VOLT: 3.23487
-  response: 7E80641247ECF6791
+    LAMBDA11_VOLT: 0.9921
+    O2S11_VOLT: 3.20437
+  response: 7E80641247EFD6697
 - expected_values:
-    LAMBDA11_VOLT: 1.00153
-    O2S11_VOLT: 3.27757
-  response: 7E8064124803268EF
+    LAMBDA11_VOLT: 0.99704
+    O2S11_VOLT: 3.28001
+  response: 7E80641247F9F6903
 - expected_values:
-    LAMBDA11_VOLT: 1.03061
-    O2S11_VOLT: 3.42765
-  response: 7E806412483EB6DBD
+    LAMBDA11_VOLT: 1.00058
+    O2S11_VOLT: 3.21413
+  response: 7E8064124801366E7
+- expected_values:
+    LAMBDA11_VOLT: 1.23288
+    O2S11_VOLT: 4.99744
+  response: 7E80641249DCF9FFF
