--- a/tests/test_cases/2006/commands/7E0.7E8.21DA.yaml
+++ b/tests/test_cases/2006/commands/7E0.7E8.21DA.yaml
@@ -7,6 +7,9 @@ test_cases:
     TOYOTA_GEAR_V3: 2
   response: 7E80461DA0204
 - expected_values:
+    TOYOTA_GEAR_V3: 3
+  response: 7E80461DA0304
+- expected_values:
     TOYOTA_GEAR_V3: 4
   response: 7E80461DA0404
 - expected_values:
