--- a/tests/test_cases/2006/commands/7E0.0131.yaml
+++ b/tests/test_cases/2006/commands/7E0.0131.yaml
@@ -12,3 +12,18 @@ test_cases:
 - expected_values:
     CLR_DIST: 6809
   response: 7E80441311A99
+- expected_values:
+    CLR_DIST: 6953
+  response: 7E80441311B29
+- expected_values:
+    CLR_DIST: 6954
+  response: 7E80441311B2A
+- expected_values:
+    CLR_DIST: 6955
+  response: 7E80441311B2B
+- expected_values:
+    CLR_DIST: 6956
+  response: 7E80441311B2C
+- expected_values:
+    CLR_DIST: 6957
+  response: 7E80441311B2D
