--- a/tests/test_cases/2006/commands/7E0.7E8.2128.yaml
+++ b/tests/test_cases/2006/commands/7E0.7E8.2128.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2128
 test_cases:
 - expected_values:
+    TOYOTA_ODO: 7645010
+  response: 7E806612874A752A1
+- expected_values:
     TOYOTA_ODO: 7930206
   response: 7E806612879015EEF
 - expected_values:
@@ -10,8 +13,8 @@ test_cases:
     TOYOTA_ODO: 8322408
   response: 7E80661287EFD6813
 - expected_values:
-    TOYOTA_ODO: 8620910
-  response: 7E8066128838B6E0D
+    TOYOTA_ODO: 8405862
+  response: '7E806612880436601'
 - expected_values:
-    TOYOTA_ODO: 9986172
-  response: 7E806612898607C81
+    TOYOTA_ODO: 10342303
+  response: 7E80661289DCF9FFF
