Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7B0.7B8.2146.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2146.yaml
@@ -10,6 +10,8 @@ test_cases:
 - expected_values:
     TOYOTA_ZP_DEC: -25.11
     TOYOTA_ZP_DEC2: -24.71769
+    TOYOTA_ZP_YAW: 0
+    TOYOTA_ZP_YAW_RATE: 0
   response: |-
     7B8100961460002807F
     7B821F1271F00000000
