--- a/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -29,9 +29,13 @@ test_cases:
     TOYOTA_TT_1_V2: 33
     TOYOTA_TT_2_V2: 34
     TOYOTA_TT_3_V2: 33
+    TOYOTA_TT_4_V2: 34
+    TOYOTA_TT_5_V2: 34
     TOYOTA_TT_FL_V2: 33
     TOYOTA_TT_FR_V2: 34
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RR_V2: 34
+    TOYOTA_TT_SPARE_V2: 34
   response: |-
     7582A1008621004494A
     7582A21494A4A000000
