Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.213D.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_ADJUSTED_AMBIENT_T: 11.76
   response: 7CC03613D85
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 17.84
+  response: 7CC03613D98
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 19.76
   response: 7CC03613D9E
 - expected_values:
