--- a/tests/test_cases/2024/commands/700.708.22106C.yaml
+++ b/tests/test_cases/2024/commands/700.708.22106C.yaml
@@ -1,11 +1,14 @@
 command_id: 700.708.22106C
 test_cases:
 - expected_values:
-    TOYOTA_DIST_SINCE_BAT_DISC: 15195
-  response: 7080562106C3B5B
+    TOYOTA_DIST_SINCE_BAT_DISC: 15194
+  response: 7080562106C3B5A
 - expected_values:
     TOYOTA_DIST_SINCE_BAT_DISC: 15359
   response: 7080562106C3BFF
 - expected_values:
     TOYOTA_DIST_SINCE_BAT_DISC: 15363
   response: 7080562106C3C03
+- expected_values:
+    TOYOTA_DIST_SINCE_BAT_DISC: 32024
+  response: 7080562106C7D18
