Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
@@ -7,17 +7,23 @@ test_cases:
     7B81009610567820514
     7B821390E9000000000
 - expected_values:
+    TOYOTA_DECEL: -0.64165
+    TOYOTA_DECEL_2: 1.49718
+  response: |-
+    7B8100961057B8A080C
+    7B8213A115000000000
+- expected_values:
     TOYOTA_DECEL: -0.35647
     TOYOTA_DECEL_2: -1.06941
   response: |-
     7B8100961057D780358
     7B82100F7BA00000000
 - expected_values:
-    TOYOTA_DECEL: -0.21388
-    TOYOTA_DECEL_2: 0.35647
+    TOYOTA_DECEL: -0.35647
+    TOYOTA_DECEL_2: 2.49529
   response: |-
-    7B8100961057E8207AC
-    7B8213D21A300000000
+    7B8100961057D910536
+    7B8213A148000000000
 - expected_values:
     TOYOTA_DECEL: -0.21388
     TOYOTA_DECEL_2: 1.92494
@@ -40,6 +46,12 @@ test_cases:
     TOYOTA_DECEL: 0.07129
     TOYOTA_DECEL_2: 0.07129
   response: |-
+    7B81009610580800221
+    7B82100FF5000000000
+- expected_values:
+    TOYOTA_DECEL: 0.07129
+    TOYOTA_DECEL_2: 0.07129
+  response: |-
     7B8100961058080025B
     7B8210000C000000000
 - expected_values:
@@ -49,8 +61,8 @@ test_cases:
     7B810096105818906A1
     7B821451AF000000000
 - expected_values:
-    TOYOTA_DECEL: 0.78424
-    TOYOTA_DECEL_2: 0.49906
+    TOYOTA_DECEL: 1.212
+    TOYOTA_DECEL_2: 0.07129
   response: |-
-    7B810096105858307CC
-    7B8213617C300000000
+    7B81009610588800550
+    7B8211E085600000000
