--- a/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2106.yaml
@@ -1,6 +1,12 @@
 command_id: 7B0.7B8.2106
 test_cases:
 - expected_values:
+    TOYOTA_YAW_1: -2
+    TOYOTA_YAW_2: -1
+    TOYOTA_YAW_RATE: -2
+    TOYOTA_YAW_RATE2: -1
+  response: 7B80561067E7F5B
+- expected_values:
     TOYOTA_YAW_1: -1
     TOYOTA_YAW_2: -2
     TOYOTA_YAW_RATE: -1
@@ -19,8 +25,8 @@ test_cases:
     TOYOTA_YAW_RATE2: 9
   response: 7B8056106808915
 - expected_values:
-    TOYOTA_YAW_1: 1
+    TOYOTA_YAW_1: 3
     TOYOTA_YAW_2: 0
-    TOYOTA_YAW_RATE: 1
+    TOYOTA_YAW_RATE: 3
     TOYOTA_YAW_RATE2: 0
-  response: 7B805610681800F
+  response: 7B80561068380A5
