--- a/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
@@ -31,6 +31,18 @@ test_cases:
     TOYOTA_RR_WHEEL_ACCELERATION: 2
   response: 7B806614200010200
 - expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 2
+    TOYOTA_FR_WHEEL_ACCELERATION: 1
+    TOYOTA_RL_WHEEL_ACCELERATION: 1
+    TOYOTA_RR_WHEEL_ACCELERATION: 2
+  response: 7B806614201020201
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 3
+    TOYOTA_FR_WHEEL_ACCELERATION: 2
+    TOYOTA_RL_WHEEL_ACCELERATION: 0
+    TOYOTA_RR_WHEEL_ACCELERATION: 254
+  response: 7B80661420203FE00
+- expected_values:
     TOYOTA_FL_WHEEL_ACCELERATION: 0
     TOYOTA_FR_WHEEL_ACCELERATION: 6
     TOYOTA_RL_WHEEL_ACCELERATION: 0
