--- a/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
@@ -13,6 +13,12 @@ test_cases:
     TOYOTA_AAT_7C4: 20.1
   response: 7CC0361227C
 - expected_values:
+    TOYOTA_AAT_7C4: 23.6
+  response: 7CC03612286
+- expected_values:
+    TOYOTA_AAT_7C4: 24.65
+  response: 7CC03612289
+- expected_values:
     TOYOTA_AAT_7C4: 26.4
   response: 7CC0361228E
 - expected_values:
