--- a/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.214B.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.214B
 test_cases:
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 0.05
+  response: 7CC03614B55
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 0.4
   response: 7CC03614B56
 - expected_values:
@@ -15,6 +18,9 @@ test_cases:
 - expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 3.2
   response: 7CC03614B5E
+- expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 4.95
+  response: 7CC03614B63
 - expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 6.35
   response: 7CC03614B67
