--- a/tests/test_cases/2018/commands/780.788.2104.yaml
+++ b/tests/test_cases/2018/commands/780.788.2104.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     TOYOTA_BUCKLE_RS: 2
   response: '78806610402020102'
+- expected_values:
+    TOYOTA_BUCKLE_RS: 1
+  response: '78806610402050101'
+- expected_values:
+    TOYOTA_BUCKLE_RS: 2
+  response: '78806610402050202'
