--- a/tests/test_cases/2006/commands/7E0.7E8.2124.yaml
+++ b/tests/test_cases/2006/commands/7E0.7E8.2124.yaml
@@ -17,6 +17,12 @@ test_cases:
     TOYOTA_COMMUNICATION_WITH_HV: 1
     TOYOTA_COMM_WITH_AIR_CONDITIONER: 1
     TOYOTA_COMM_WITH_VALVEMATIC_COMM: 1
+  response: 7E80661247F6267FF
+- expected_values:
+    TOYOTA_COMMUNICATION_WITH_BRAKE: 1
+    TOYOTA_COMMUNICATION_WITH_HV: 1
+    TOYOTA_COMM_WITH_AIR_CONDITIONER: 1
+    TOYOTA_COMM_WITH_VALVEMATIC_COMM: 1
   response: 7E80661247FFD695D
 - expected_values:
     TOYOTA_COMMUNICATION_WITH_BRAKE: 0
