--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -298,6 +298,7 @@ unsupported_commands_by_ecu:
   - 7D2.7DA.221F4A:TOYOTA_ACC_PEDAL_POS_2
   - 7D2.7DA.221F9A:TOYOTA_HVBAT_C,TOYOTA_HVBAT_V
   "7E0":
+  - 7E0.7E8.2105:TOYOTA_CATALYST_T_B1S1,TOYOTA_CATALYST_T_B1S2
   - 7E0.7E8.2121:TOYOTA_CC_CANCEL_SWITCH_ON,TOYOTA_CC_CCS_INDICATOR_M_CPU_ON,TOYOTA_CC_CCS_READY_M_CPU_ON,TOYOTA_CC_CC_ON,TOYOTA_CC_DRIVING_FORCE,TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON,TOYOTA_CC_MAIN_SW_M_CPU_ON,TOYOTA_CC_ON,TOYOTA_CC_RES_ACC_SWITCH_ON,TOYOTA_CC_S,TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON,TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON,TOYOTA_CC_VSS
   - 7E0.7E8.2124:TOYOTA_COMMUNICATION_WITH_BRAKE,TOYOTA_COMMUNICATION_WITH_HV,TOYOTA_COMM_WITH_AIR_CONDITIONER,TOYOTA_COMM_WITH_VALVEMATIC_COMM
   - 7E0.7E8.21DA:TOYOTA_GEAR_V3
