--- a/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2122.yaml
@@ -19,6 +19,9 @@ test_cases:
     TOYOTA_AAT_7C4: 24.65
   response: 7CC03612289
 - expected_values:
+    TOYOTA_AAT_7C4: 26.05
+  response: 7CC0361228D
+- expected_values:
     TOYOTA_AAT_7C4: 26.4
   response: 7CC0361228E
 - expected_values:
