--- a/tests/test_cases/2018/commands/7C4.7CC.2126.yaml
+++ b/tests/test_cases/2018/commands/7C4.7CC.2126.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.2126
 test_cases:
 - expected_values:
+    TOYOTA_ECT: 45.75
+  response: 7CC0361267F
+- expected_values:
     TOYOTA_ECT: 70.6
   response: 7CC036126C6
 - expected_values:
